[GM3Restyling] Increase issues line height in issues
With the Buttons migration, the "Unhide all" button in the IssuesPane
gets cut off when the focus is visible. In order to accomodate this,
this CL increases the height of the line.

Before: https://i.imgur.com/h2bIfuC.png
After: https://i.imgur.com/KqFprBJ.png
Fixed: 350628672

--- a/front_end/panels/issues/issuesTree.css
+++ b/front_end/panels/issues/issuesTree.css
@@ -20,6 +20,7 @@
 .issues li {
   white-space: normal;
   align-items: flex-start;
+  min-height: var(--sys-size-13);
 }
 
 /* Hide toggle for tree items which cannot be collapsed */
@@ -86,7 +87,6 @@
 
 .unhide-all-issues-button {
   margin: 0;
-  height: 20px;
 }
 
 p {
